@@ -21,6 +21,8 @@
  * $Id$
  ***************************************************************************/
 
+#include "setup.h"
+
 #include <stdio.h>
 #include <stdlib.h>
 
@@ -364,7 +366,7 @@ void Curl_splayprint(struct Curl_tree * t, int d, char output)
 
 /* A sample use of these functions.  Start with the empty tree, insert some
    stuff into it, and then delete it */
-int main(int argc, char **argv)
+int main(int argc, argv_item_t argv[])
 {
   struct Curl_tree *root, *t;
   void *ptrs[MAX];
