@@ -28,6 +28,7 @@ This release includes the following bugfixes:
  o GnuTLS free of NULL credentials
  o NSS-fix for closing down SSL
  o bad warning from configure when gnutls was selected
+ o compilation on VMS 64-bit mode
 
 This release includes the following known bugs:
 
@@ -49,6 +50,6 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  Song Ma, Dan Fandrich, Yang Tse, Jay Austin, Robert Iakobashvil,
- James Housley, Daniel Black
+ James Housley, Daniel Black, Steve Little
 
         Thanks! (and sorry if I forgot to mention someone)
